# PySpark-Learning

aggregations/: pyproject.toml
aggregations/src/aggregations/AggDemo/: AggDemo.py  AggDemo2.py  SparkJoinDemo.py  log4j.properties  spark.conf
aggregations/src/aggregations/AggDemo/data/: invoices.csv
micro_project/: pyproject.toml
micro_project/data/fire_department_calls/: data.csv
micro_project/src/micro_project/: fire_calls.py  log4j.properties  sample.py  spark.conf
micro_project/tests/: unit-test.py
