[project]
name = "micro-project"
version = "0.1.0"
description = ""
authors = [
    {name = "mustafaaykon",email = "mustafa.aykon@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyspark (>=3.5.5,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "setuptools (>=76.0.0,<77.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pytest (>=8.3.5,<9.0.0)",
]

[tool.poetry]
packages = [{include = "micro_project", from = "src"}]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
